--- a/AoOTaniguchi/Base.lproj/Main.storyboard
+++ b/AoOTaniguchi/Base.lproj/Main.storyboard
@@ -30,20 +30,12 @@
                                 <rect key="frame" x="14" y="525" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EU64.png" translatesAutoresizingMaskIntoConstraints="NO" id="3oa-xj-Seb">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="JP64.png" translatesAutoresizingMaskIntoConstraints="NO" id="Kqk-FC-pf1">
                                 <rect key="frame" x="0.0" y="165" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EU64.png" translatesAutoresizingMaskIntoConstraints="NO" id="8CO-D1-wYF">
-                                <rect key="frame" x="98" y="525" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="JP64.png" translatesAutoresizingMaskIntoConstraints="NO" id="Kqk-FC-pf1">
-                                <rect key="frame" x="0.0" y="205" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="JP64.png" translatesAutoresizingMaskIntoConstraints="NO" id="Euf-LY-54a">
-                                <rect key="frame" x="180" y="525" width="50" height="50"/>
+                                <rect key="frame" x="95" y="525" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="UK64.png" translatesAutoresizingMaskIntoConstraints="NO" id="qZK-CY-22c">
@@ -62,14 +54,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpm-VW-Unm">
-                                <rect key="frame" x="95" y="179" width="205" height="21"/>
+                                <rect key="frame" x="95" y="219" width="205" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjS-Fv-Nj4">
-                                <rect key="frame" x="95" y="219" width="195" height="21"/>
+                                <rect key="frame" x="95" y="179" width="195" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -82,10 +74,24 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nVN-Tc-vNw" customClass="GKBarGraph">
+                                <rect key="frame" x="5" y="295" width="309" height="222"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EU64.png" translatesAutoresizingMaskIntoConstraints="NO" id="3oa-xj-Seb">
+                                <rect key="frame" x="0.0" y="205" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EU64.png" translatesAutoresizingMaskIntoConstraints="NO" id="8CO-D1-wYF">
+                                <rect key="frame" x="178" y="525" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="barGraph" destination="nVN-Tc-vNw" id="S4z-Bm-rLq"/>
                         <outlet property="brlLabel" destination="OUf-67-ReC" id="9Ad-E4-btE"/>
                         <outlet property="dollarInputTextField" destination="wDG-dX-sFW" id="43w-d2-NF9"/>
                         <outlet property="eurLabel" destination="Zpm-VW-Unm" id="v3b-7S-exj"/>
